--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,245 @@
-/*
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap");
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+.App {
+  text-align: left;
+  font-family: "Oswald", sans-serif;
+  grid-gap: 0px;
+  overflow-x: hidden;
+  min-width: 500px;
+  transition: color 0.325s linear;
+  transition: stroke 0.325s linear;
+  transition: fill 0.325s linear;
+  transition: background-color 0.325s linear;
 
-If your plugin does not need CSS, delete this file.
+  /* transition: background-color 0.325s linear;
+  transition: color 0.325s linear;
+  transition: fill 0.325s linear; */
+}
 
-*/
+svg
+  .light-stroke
+  .light-fill
+  .light-background
+  .light-color
+  .medium-background
+  .medium-stroke
+  .dark-fill
+  .dark-stroke {
+  transition: fill 0.325s linear;
+  transition: color 0.325s linear;
+  transition: stroke 0.325s linear;
+  transition: background-color 0.325s linear;
+}
+
+h1{
+  padding-top: 4%;
+}
+.fadeIn {
+  animation: fadeInAnimation 0.325s linear;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.lineStroke {
+  stroke-dasharray: 10 10 200;
+}
+
+body {
+  background-color: #d0d5db;
+}
+.circle {
+  stroke: transparent;
+  transition: stroke 0.325s linear;
+}
+
+.fillT {
+  fill: transparent;
+  transition: fill 0.325s linear;
+}
+
+.mainBtnT {
+  fill: transparent;
+  transition: fill 0.325s linear;
+}
+
+.stubbornClock {
+  fill: none;
+  stroke: transparent;
+  stroke-width: 2.76601;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  stroke-opacity: 1;
+  transition: stroke 0.325s linear;
+}
+
+.clock {
+  fill-opacity: 1;
+  stroke-width: 1.8;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  stroke-opacity: 1;
+  paint-order: normal;
+}
+
+.bgT {
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+}
+
+.cT {
+  color: transparent;
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+  transition: color 0.325s linear;
+}
+
+.folderIcon {
+  margin: 0px 10px 10px 10px;
+}
+.gearIcon {
+  margin: 5px 10px 10px 10px;
+}
+
+.topBar {
+  display: flex;
+  justify-content: left;
+  margin-left: 25px;
+}
+
+.tName {
+  height: 80px;
+  width: 253px;
+  padding-right: 1%;
+  padding-left: 1%;
+  font-size: 3rem;
+  margin-right: 1%;
+}
+
+.pickerBtn {
+  width: 100px;
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+  margin-right: 1%;
+  height: 80px;
+  border-radius: 1rem;
+}
+
+.settingsBtn {
+  width: 80;
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+  height: 80px;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.pickerView {
+  border-radius: 10px;
+  text-align: center;
+  max-width: 465px;
+  margin-left: 24px;
+}
+.settingsView {
+  border-radius: 10px;
+  text-align: center;
+  max-width: 465px;
+  margin-left: 24px;
+  padding-bottom: 30px;
+}
+
+.innerSettings {
+  display: flex;
+  justify-content: center;
+}
+
+.settings {
+  margin: 10px;
+}
+
+.stubborn {
+  stroke-width: 35.3357;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  transition: stroke 0.325s linear;
+}
+
+.stubborn {
+  stroke-width: 35.3357;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  transition: stroke 0.325s linear;
+}
+
+.totalLength {
+  letter-spacing: -4px;
+  font-weight: bolder;
+  height: 80px;
+  padding-top: 1px;
+  padding-left: -2.5%;
+  font-size: 3rem;
+  transition: color 0.325s linear;
+  color: transparent;
+}
+
+.bold {
+  font: bold;
+}
+
+.icon {
+  fill: transparent;
+  /* background-color: #fcb2b6;
+  color: #fcb2b6; */
+}
+.timerCircle {
+  transform: translate(-10%, -15%) scale(0.8);
+}
+
+.innerCircle {
+  transform: rotate(45);
+  transition: all 0.325s linear;
+}
+
+.timerText {
+  font-size: 125px;
+  word-spacing: 0%;
+  kerning: -2cm;
+}
+
+.svgTaskCard {
+  margin-right: 0.5%;
+}
+
+.taskList {
+  margin: -175px 0 0 13px;
+}
+
+.taskCard {
+  font-family: "Oswald", sans-serif;
+  border-radius: 45px;
+  width: 10fr;
+  margin: 0 1.5fr 1.5fr 1.5fr;
+  height: 1fr;
+  background-color: #e10915;
+  color: #fcb2b6;
+  display: grid;
+  grid-template-columns: 1fr 9fr;
+  grid-template-rows: 6fr 3fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "icon taskName"
+    "length cTimes";
+}
+
+.icon {
+  grid-area: icon;
+}
