--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,230 @@
-.App {
-  margin: 1rem;
+html {
+  text-align: left;
+  font-family: "Oswald", sans-serif;
+  grid-gap: 0px;
+  overflow-x: hidden;
+  min-width: 500px;
+  max-width: 500px;
+  /* transition: background-color 0.325s linear;
+  transition: color 0.325s linear;
+  transition: fill 0.325s linear; */
+}
+
+html > * {
+  transition: color 0.325s linear;
+  transition: stroke 0.325s linear;
+  transition: fill 0.325s linear;
+  transition: background-color 0.325s linear;
+
+  /* transition: background 0.325s linear; */
+}
+
+svg
+  .light-stroke
+  .light-fill
+  .light-background
+  .light-color
+  .medium-background
+  .medium-stroke
+  .dark-fill
+  .dark-stroke {
+  transition: fill 0.325s linear;
+  transition: color 0.325s linear;
+  transition: stroke 0.325s linear;
+  transition: background-color 0.325s linear;
+}
+
+.fadeIn {
+  animation: fadeInAnimation 0.325s linear;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.lineStroke {
+  stroke-dasharray: 10 10 200;
+}
+
+body {
+  background-color: #d0d5db;
+}
+.circle {
+  stroke: transparent;
+  transition: stroke 0.325s linear;
+}
+
+.fillT {
+  fill: transparent;
+  transition: fill 0.325s linear;
+}
+
+.mainBtnT {
+  fill: transparent;
+  transition: fill 0.325s linear;
+}
+
+.stubbornClock {
+  fill: none;
+  stroke: transparent;
+  stroke-width: 2.76601;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  stroke-opacity: 1;
+  transition: stroke 0.325s linear;
+}
+
+.clock {
+  fill-opacity: 1;
+  stroke-width: 1.8;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  stroke-opacity: 1;
+  paint-order: normal;
+}
+
+.bgT {
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+}
+
+.cT {
+  color: transparent;
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+  transition: color 0.325s linear;
+}
+
+.folderIcon {
+  margin: 0px 10px 10px 10px;
+}
+.gearIcon {
+  margin: 5px 10px 10px 10px;
+}
+
+.topBar {
+  display: flex;
+  justify-content: left;
+  margin-left: 25px;
+}
+
+.tName {
+  height: 80px;
+  width: 253px;
+  padding-right: 1%;
+  padding-left: 1%;
+  font-size: 3rem;
+  margin-right: 1%;
+}
+
+.pickerBtn {
+  width: 100px;
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+  margin-right: 1%;
+  height: 80px;
+  border-radius: 1rem;
+}
+
+.settingsBtn {
+  width: 80;
+  background-color: transparent;
+  transition: background-color 0.325s linear;
+  height: 80px;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.pickerView {
+  border-radius: 10px;
   text-align: center;
-  font-family: 'Oswald', sans-serif;
+  max-width: 465px;
+  margin-left: 24px;
+}
+.settingsView {
+  border-radius: 10px;
+  text-align: center;
+  max-width: 465px;
+  margin-left: 24px;
+  padding-bottom: 30px;
+}
+
+.innerSettings {
+  display: flex;
+  justify-content: center;
+}
+
+.settings {
+  margin: 10px;
+}
+
+.stubborn {
+  stroke-width: 35.3357;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  transition: stroke 0.325s linear;
+}
+
+.stubborn {
+  stroke-width: 35.3357;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: none;
+  transition: stroke 0.325s linear;
+}
+
+.totalLength {
+  letter-spacing: -4px;
+  font-weight: bolder;
+  height: 80px;
+  padding-top: 1px;
+  padding-left: -2.5%;
+  font-size: 3rem;
+  transition: color 0.325s linear;
+  color: transparent;
+}
+
+.bold {
+  font: bold;
+}
+
+.icon {
+  fill: transparent;
+  /* background-color: #fcb2b6;
+  color: #fcb2b6; */
+}
+.timerCircle {
+  transform: translate(-10%, -15%) scale(0.8);
+}
+
+.innerCircle {
+  transform: rotate(45);
+  transition: all 0.325s linear;
+}
+
+.timerText {
+  font-size: 125px;
+  word-spacing: 0%;
+  kerning: -2cm;
+}
+
+.svgTaskCard {
+  margin-right: 0.5%;
 }
 
 .taskList {
-  width: 60%;
-  margin: 0 20% 0 20%;
+  margin: -175px 0 0 13px;
 }
 
-
 .taskCard {
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   border-radius: 45px;
   width: 10fr;
   margin: 0 1.5fr 1.5fr 1.5fr;
@@ -29,24 +242,4 @@
 
 .icon {
   grid-area: icon;
-}
-.length {
-  line-height: 5%;
-  font-size: 25px;
-  margin: 7% 0% 7% 50%;
-  grid-area: length;
-}
-.cTimes {
-  margin-left: auto;
-  margin-right: 25%;
-  line-height: 5%;
-  margin-top: 1%;
-  font-size: 25px;
-  grid-area: cTimes;
-}
-.taskName {
-  line-height: 5%;
-  font-size: 80px;
-  padding: 7% 0% 7% 15%;
-  grid-area: taskName;
 }
